feat!: add student report fetching (#13)
* feat!: add semester to group course assignement (GroupCourse)

* feat: check semester course credit when assigning to group

* feat: implement per level student report

* fix: allow grade update after course end

# Conflicts:
#	src/main/java/com/unigrade/api/repository/ExamRepository.java

* fix: show only one report line per course

* fix!: set Instant zoneOffset to UTC

* feat: send report pdf on report endpoint

* feat: add per level report filtering and report status

* fix: update grade after course end

* feat: restrict student report fetching

* fix!: prevent course to be reassigned to a group

* fix!: improve credit check in report