@@ -15,12 +15,8 @@ import com.unigrade.api.mapper.GradeMapper;
 import com.unigrade.api.model.Grade;
 import com.unigrade.api.model.Role;
 import com.unigrade.api.model.dto.GradeRequest;
-import com.unigrade.api.repository.ExamRepository;
-import com.unigrade.api.repository.GradeRepository;
-import com.unigrade.api.repository.GroupCourseRepository;
-import com.unigrade.api.repository.MembershipRepository;
-import com.unigrade.api.repository.TeacherCourseRepository;
-import com.unigrade.api.repository.UserRepository;
+import com.unigrade.api.repository.*;
+import com.unigrade.api.repository.model.JCourse;
 import com.unigrade.api.repository.model.JExam;
 import com.unigrade.api.repository.model.JGrade;
 import com.unigrade.api.repository.model.JGroupCourse;
@@ -102,35 +98,52 @@ class GradeServiceTest {
 
   @Test
   void findByExam_returnsMappedList() {
-    when(groupCourseRepository.findByGroupIdAndCourseIdAndEndDateIsNull(GROUP_ID, COURSE_ID))
+    when(groupCourseRepository.findByGroupIdAndCourseId(GROUP_ID, COURSE_ID))
         .thenReturn(Optional.of(assignment()));
-    when(examRepository.findById(EXAM_ID)).thenReturn(Optional.of(exam()));
+    when(examRepository.findByIdAndGroupCourseGroupIdAndGroupCourseCourseId(
+            EXAM_ID, GROUP_ID, COURSE_ID))
+        .thenReturn(Optional.of(exam()));
     when(repository.findByExamIdOrderByGradeDateAsc(EXAM_ID)).thenReturn(List.of(grade()));
 
     List<Grade> result = service.findByExam(GROUP_ID, COURSE_ID, EXAM_ID, null);
 
     assertEquals(1, result.size());
-    assertEquals(GRADE_ID, result.get(0).id());
-    assertEquals(STUDENT_ID, result.get(0).studentId());
+    assertEquals(GRADE_ID, result.getFirst().id());
+    assertEquals(STUDENT_ID, result.getFirst().studentId());
   }
 
   @Test
   void findByExam_filtersByStudentId() {
-    when(groupCourseRepository.findByGroupIdAndCourseIdAndEndDateIsNull(GROUP_ID, COURSE_ID))
+    when(groupCourseRepository.findByGroupIdAndCourseId(GROUP_ID, COURSE_ID))
         .thenReturn(Optional.of(assignment()));
-    when(examRepository.findById(EXAM_ID)).thenReturn(Optional.of(exam()));
+    when(examRepository.findByIdAndGroupCourseGroupIdAndGroupCourseCourseId(
+            EXAM_ID, GROUP_ID, COURSE_ID))
+        .thenReturn(Optional.of(exam()));
     when(repository.findByExamIdOrderByGradeDateAsc(EXAM_ID))
         .thenReturn(List.of(grade(), gradeOf(OTHER_STUDENT_ID)));
 
     List<Grade> result = service.findByExam(GROUP_ID, COURSE_ID, EXAM_ID, STUDENT_ID);
 
     assertEquals(1, result.size());
-    assertEquals(STUDENT_ID, result.get(0).studentId());
+    assertEquals(STUDENT_ID, result.getFirst().studentId());
   }
 
   @Test
-  void findByExam_noActiveAssignment_throwsNotFound() {
-    when(groupCourseRepository.findByGroupIdAndCourseIdAndEndDateIsNull(GROUP_ID, COURSE_ID))
+  void findByExam_wrongGroupCourse_throwsNotFound() {
+    UUID wrongGroupId = UUID.randomUUID();
+    when(groupCourseRepository.findByGroupIdAndCourseId(wrongGroupId, COURSE_ID))
+        .thenReturn(Optional.empty());
+
+    assertThrows(
+        NotFoundException.class, () -> service.findByExam(wrongGroupId, COURSE_ID, EXAM_ID, null));
+  }
+
+  @Test
+  void findByExam_missingExam_throwsNotFound() {
+    when(groupCourseRepository.findByGroupIdAndCourseId(GROUP_ID, COURSE_ID))
+        .thenReturn(Optional.of(assignment()));
+    when(examRepository.findByIdAndGroupCourseGroupIdAndGroupCourseCourseId(
+            EXAM_ID, GROUP_ID, COURSE_ID))
         .thenReturn(Optional.empty());
 
     assertThrows(
@@ -138,23 +151,12 @@ class GradeServiceTest {
   }
 
   @Test
-  void findByExam_missingExam_throwsNotFound() {
-    when(groupCourseRepository.findByGroupIdAndCourseIdAndEndDateIsNull(GROUP_ID, COURSE_ID))
-        .thenReturn(Optional.of(assignment()));
-    when(examRepository.findById(EXAM_ID)).thenReturn(Optional.empty());
-
-    NotFoundException exception =
-        assertThrows(
-            NotFoundException.class, () -> service.findByExam(GROUP_ID, COURSE_ID, EXAM_ID, null));
-
-    assertTrue(exception.getMessage().contains("Exam not found"));
-  }
-
-  @Test
   void grade_saves() {
-    when(groupCourseRepository.findByGroupIdAndCourseIdAndEndDateIsNull(GROUP_ID, COURSE_ID))
+    when(groupCourseRepository.findByGroupIdAndCourseId(GROUP_ID, COURSE_ID))
         .thenReturn(Optional.of(assignment()));
-    when(examRepository.findById(EXAM_ID)).thenReturn(Optional.of(exam()));
+    when(examRepository.findByIdAndGroupCourseGroupIdAndGroupCourseCourseId(
+            EXAM_ID, GROUP_ID, COURSE_ID))
+        .thenReturn(Optional.of(exam()));
     when(userRepository.findById(STUDENT_ID)).thenReturn(Optional.of(student()));
     when(membershipRepository.existsByGroupIdAndStudentIdAt(
             eq(GROUP_ID), eq(STUDENT_ID), any(LocalDate.class)))
@@ -172,9 +174,11 @@ class GradeServiceTest {
 
   @Test
   void grade_missingStudent_throwsNotFound() {
-    when(groupCourseRepository.findByGroupIdAndCourseIdAndEndDateIsNull(GROUP_ID, COURSE_ID))
+    when(groupCourseRepository.findByGroupIdAndCourseId(GROUP_ID, COURSE_ID))
         .thenReturn(Optional.of(assignment()));
-    when(examRepository.findById(EXAM_ID)).thenReturn(Optional.of(exam()));
+    when(examRepository.findByIdAndGroupCourseGroupIdAndGroupCourseCourseId(
+            EXAM_ID, GROUP_ID, COURSE_ID))
+        .thenReturn(Optional.of(exam()));
     when(userRepository.findById(STUDENT_ID)).thenReturn(Optional.empty());
 
     NotFoundException exception =
@@ -188,9 +192,11 @@ class GradeServiceTest {
   void grade_notStudentRole_throwsBadRequest() {
     var teacher = student();
     teacher.setRole(Role.TEACHER);
-    when(groupCourseRepository.findByGroupIdAndCourseIdAndEndDateIsNull(GROUP_ID, COURSE_ID))
+    when(groupCourseRepository.findByGroupIdAndCourseId(GROUP_ID, COURSE_ID))
         .thenReturn(Optional.of(assignment()));
-    when(examRepository.findById(EXAM_ID)).thenReturn(Optional.of(exam()));
+    when(examRepository.findByIdAndGroupCourseGroupIdAndGroupCourseCourseId(
+            EXAM_ID, GROUP_ID, COURSE_ID))
+        .thenReturn(Optional.of(exam()));
     when(userRepository.findById(STUDENT_ID)).thenReturn(Optional.of(teacher));
 
     assertThrows(
@@ -201,9 +207,11 @@ class GradeServiceTest {
   void grade_inactiveStudent_throwsBadRequest() {
     var inactive = student();
     inactive.setIsActive(false);
-    when(groupCourseRepository.findByGroupIdAndCourseIdAndEndDateIsNull(GROUP_ID, COURSE_ID))
+    when(groupCourseRepository.findByGroupIdAndCourseId(GROUP_ID, COURSE_ID))
         .thenReturn(Optional.of(assignment()));
-    when(examRepository.findById(EXAM_ID)).thenReturn(Optional.of(exam()));
+    when(examRepository.findByIdAndGroupCourseGroupIdAndGroupCourseCourseId(
+            EXAM_ID, GROUP_ID, COURSE_ID))
+        .thenReturn(Optional.of(exam()));
     when(userRepository.findById(STUDENT_ID)).thenReturn(Optional.of(inactive));
 
     assertThrows(
@@ -212,9 +220,11 @@ class GradeServiceTest {
 
   @Test
   void grade_notMemberAtExamDate_throwsBadRequest() {
-    when(groupCourseRepository.findByGroupIdAndCourseIdAndEndDateIsNull(GROUP_ID, COURSE_ID))
+    when(groupCourseRepository.findByGroupIdAndCourseId(GROUP_ID, COURSE_ID))
         .thenReturn(Optional.of(assignment()));
-    when(examRepository.findById(EXAM_ID)).thenReturn(Optional.of(exam()));
+    when(examRepository.findByIdAndGroupCourseGroupIdAndGroupCourseCourseId(
+            EXAM_ID, GROUP_ID, COURSE_ID))
+        .thenReturn(Optional.of(exam()));
     when(userRepository.findById(STUDENT_ID)).thenReturn(Optional.of(student()));
     when(membershipRepository.existsByGroupIdAndStudentIdAt(
             eq(GROUP_ID), eq(STUDENT_ID), any(LocalDate.class)))
@@ -230,9 +240,11 @@ class GradeServiceTest {
 
   @Test
   void grade_missingExam_throwsNotFound() {
-    when(groupCourseRepository.findByGroupIdAndCourseIdAndEndDateIsNull(GROUP_ID, COURSE_ID))
+    when(groupCourseRepository.findByGroupIdAndCourseId(GROUP_ID, COURSE_ID))
         .thenReturn(Optional.of(assignment()));
-    when(examRepository.findById(EXAM_ID)).thenReturn(Optional.empty());
+    when(examRepository.findByIdAndGroupCourseGroupIdAndGroupCourseCourseId(
+            EXAM_ID, GROUP_ID, COURSE_ID))
+        .thenReturn(Optional.empty());
 
     assertThrows(
         NotFoundException.class, () -> service.grade(GROUP_ID, COURSE_ID, EXAM_ID, request()));
@@ -241,9 +253,11 @@ class GradeServiceTest {
   @Test
   void findByExam_studentRequestingOwnGrades_isAllowed() {
     loginAs(STUDENT_ID, Role.STUDENT);
-    when(groupCourseRepository.findByGroupIdAndCourseIdAndEndDateIsNull(GROUP_ID, COURSE_ID))
+    when(groupCourseRepository.findByGroupIdAndCourseId(GROUP_ID, COURSE_ID))
         .thenReturn(Optional.of(assignment()));
-    when(examRepository.findById(EXAM_ID)).thenReturn(Optional.of(exam()));
+    when(examRepository.findByIdAndGroupCourseGroupIdAndGroupCourseCourseId(
+            EXAM_ID, GROUP_ID, COURSE_ID))
+        .thenReturn(Optional.of(exam()));
     when(repository.findByExamIdOrderByGradeDateAsc(EXAM_ID))
         .thenReturn(List.of(grade(), gradeOf(OTHER_STUDENT_ID)));
 
@@ -256,9 +270,11 @@ class GradeServiceTest {
   @Test
   void findByExam_studentRequestingSomeoneElsesGrades_throwsForbidden() {
     loginAs(STUDENT_ID, Role.STUDENT);
-    when(groupCourseRepository.findByGroupIdAndCourseIdAndEndDateIsNull(GROUP_ID, COURSE_ID))
+    when(groupCourseRepository.findByGroupIdAndCourseId(GROUP_ID, COURSE_ID))
         .thenReturn(Optional.of(assignment()));
-    when(examRepository.findById(EXAM_ID)).thenReturn(Optional.of(exam()));
+    when(examRepository.findByIdAndGroupCourseGroupIdAndGroupCourseCourseId(
+            EXAM_ID, GROUP_ID, COURSE_ID))
+        .thenReturn(Optional.of(exam()));
 
     assertThrows(
         ForbiddenException.class,
@@ -268,9 +284,11 @@ class GradeServiceTest {
   @Test
   void findByExam_teacherAssignedToCourse_isAllowed() {
     loginAs(TEACHER_ID, Role.TEACHER);
-    when(groupCourseRepository.findByGroupIdAndCourseIdAndEndDateIsNull(GROUP_ID, COURSE_ID))
+    when(groupCourseRepository.findByGroupIdAndCourseId(GROUP_ID, COURSE_ID))
         .thenReturn(Optional.of(assignment()));
-    when(examRepository.findById(EXAM_ID)).thenReturn(Optional.of(exam()));
+    when(examRepository.findByIdAndGroupCourseGroupIdAndGroupCourseCourseId(
+            EXAM_ID, GROUP_ID, COURSE_ID))
+        .thenReturn(Optional.of(exam()));
     when(teacherCourseRepository.existsByCourseIdAndTeacherId(COURSE_ID, TEACHER_ID))
         .thenReturn(true);
     when(repository.findByExamIdOrderByGradeDateAsc(EXAM_ID)).thenReturn(List.of(grade()));
@@ -283,9 +301,11 @@ class GradeServiceTest {
   @Test
   void findByExam_teacherNotAssignedToCourse_throwsForbidden() {
     loginAs(TEACHER_ID, Role.TEACHER);
-    when(groupCourseRepository.findByGroupIdAndCourseIdAndEndDateIsNull(GROUP_ID, COURSE_ID))
+    when(groupCourseRepository.findByGroupIdAndCourseId(GROUP_ID, COURSE_ID))
         .thenReturn(Optional.of(assignment()));
-    when(examRepository.findById(EXAM_ID)).thenReturn(Optional.of(exam()));
+    when(examRepository.findByIdAndGroupCourseGroupIdAndGroupCourseCourseId(
+            EXAM_ID, GROUP_ID, COURSE_ID))
+        .thenReturn(Optional.of(exam()));
     when(teacherCourseRepository.existsByCourseIdAndTeacherId(COURSE_ID, TEACHER_ID))
         .thenReturn(false);
 
@@ -316,9 +336,11 @@ class GradeServiceTest {
     loginAs(TEACHER_ID, Role.TEACHER);
     when(teacherCourseRepository.existsByCourseIdAndTeacherId(COURSE_ID, TEACHER_ID))
         .thenReturn(true);
-    when(groupCourseRepository.findByGroupIdAndCourseIdAndEndDateIsNull(GROUP_ID, COURSE_ID))
+    when(groupCourseRepository.findByGroupIdAndCourseId(GROUP_ID, COURSE_ID))
         .thenReturn(Optional.of(assignment()));
-    when(examRepository.findById(EXAM_ID)).thenReturn(Optional.of(exam()));
+    when(examRepository.findByIdAndGroupCourseGroupIdAndGroupCourseCourseId(
+            EXAM_ID, GROUP_ID, COURSE_ID))
+        .thenReturn(Optional.of(exam()));
     when(userRepository.findById(STUDENT_ID)).thenReturn(Optional.of(student()));
     when(membershipRepository.existsByGroupIdAndStudentIdAt(
             eq(GROUP_ID), eq(STUDENT_ID), any(LocalDate.class)))
@@ -333,17 +355,22 @@ class GradeServiceTest {
   private JGroupCourse assignment() {
     var group = new JStudentGroup();
     group.setId(GROUP_ID);
+    var course = new JCourse();
+    course.setId(COURSE_ID);
     return JGroupCourse.builder()
         .id(GROUP_COURSE_ID)
         .group(group)
+        .course(course)
         .startDate(LocalDate.of(2024, 1, 1))
         .endDate(null)
         .build();
   }
 
   private JExam exam() {
-    var groupCourse = new JGroupCourse();
-    groupCourse.setId(GROUP_COURSE_ID);
+    var group = JStudentGroup.builder().id(GROUP_ID).build();
+    var course = JCourse.builder().id(COURSE_ID).build();
+    var groupCourse =
+        JGroupCourse.builder().id(GROUP_COURSE_ID).group(group).course(course).build();
     return JExam.builder()
         .id(EXAM_ID)
         .examDate(EXAM_DATE)
